--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         <activity android:name=".MainActivity" android:exported="false" />
         <activity android:name=".SettingsActivity" android:exported="false" />
         <activity android:name=".ShopActivity" android:exported="false" />
-        <activity android:name=".ClawMachineActivity" android:exported="false" />
+        <activity
+            android:name=".ClawMachineActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            tools:ignore="LockedOrientationActivity" />
         <activity android:name=".LoadingActivity" android:exported="false" />
 
     </application>
